--- a/src/app.css
+++ b/src/app.css
@@ -87,3 +87,12 @@ body,
   width: 100%;
   height: 100%;
 }
+
+.hide-scroll {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.hide-scroll::-webkit-scrollbar {
+  display: none;
+}
