--- a/src/app.css
+++ b/src/app.css
@@ -96,3 +96,16 @@ body,
 .hide-scroll::-webkit-scrollbar {
   display: none;
 }
+
+@keyframes spin {
+  from {
+    rotate: 0deg;
+  }
+  to {
+    rotate: 360deg;
+  }
+}
+
+.spinner {
+  animation: spin infinite;
+}
